--- a/composer.json
+++ b/composer.json
@@ -38,15 +38,15 @@
     "require": {
         "php": "^8.1|^8.2",
         "tomatophp/console-helpers": "^1.1",
-        "filament/filament": "^3.2",
+        "filament/filament": "^3.3",
         "mallardduck/blade-boxicons": "^2.4",
-        "spatie/laravel-markdown": "^2.5",
-        "tomatophp/filament-accounts": "^2.1",
-        "laravel/jetstream": "^5.1",
-        "tomatophp/filament-cms": "^1.0",
-        "tomatophp/filament-menus": "*",
-        "tomatophp/filament-seo": "*",
-        "tomatophp/filament-settings-hub": "*",
-        "tomatophp/filament-types": "^1.0"
+        "spatie/laravel-markdown": "^2.7.1",
+        "tomatophp/filament-accounts": "^2.1.5",
+        "laravel/jetstream": "^5.3.5",
+        "tomatophp/filament-cms": "^1.0.30",
+        "tomatophp/filament-menus": "^1.0.8",
+        "tomatophp/filament-seo": "^1.0.3",
+        "tomatophp/filament-settings-hub": "^1.0.10",
+        "tomatophp/filament-types": "^1.0.27"
     }
 }
